2010-06-22  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.s[s]c: regenerated for r159337

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.ssc: regenerated wrt manual override

2010-06-21  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.sc:
	* System.Windows.auto.ssc: regen sec. attrs.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Core.auto.ssc:
	* System.Windows.auto.sc:
	* System.Windows.auto.ssc: Update to SL4 final API.

2010-06-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.auto.sc: regenerated forgotten change

2010-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Runtime.Serialization.auto.ssc: Regenerated for r158874

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.sc: regenerated for deployment_set_
	initialization

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.auto.sc: regenerated more forgotten changes

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.s[s]c: regenerated forgotten changes

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: Update our implementation of
	  mentors to allow us to listen for changes to the mentor and
	  correctly NULL it out when the mentor is destroyed as if we
	  were to ref the mentor we'd create a cycle.

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.sc:
	* System.Windows.auto.ssc: Implement the first section of
	  mentor based databinding. When doing DataContext based
	  bindings on DependencyObjects, we get the DataContext from
	  the first FrameworkElement in the actual tree (not visual
	  tree). This FE is known as the 'mentor'. 

2010-05-31  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.sc: regenerated with API signature fix

2010-05-31  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.auto.sc: regenerated with new override rules
