@@ -1,5 +1,5 @@
 # [SecuritySafeCritical] needed inside System.Windows to call all [SecurityCritical] methods
-# 611 methods
+# 598 methods
 
 +SSC-M: System.Void Mono.Events::SafeAction(System.Action)
 +SSC-M: System.Exception Mono.Events::SendCompletedEventArgsGetError(System.IntPtr)
@@ -320,15 +320,6 @@
 +SSC-M: System.Void System.Windows.Controls.PasswordBox::SelectAll()
 +SSC-M: System.Void System.Windows.Controls.Primitives.Popup::Initialize()
 +SSC-M: System.Void System.Windows.Controls.Primitives.Popup::OnOpened()
-+SSC-M: System.Void System.Windows.Controls.RichTextBox::OnKeyDown(System.Windows.Input.KeyEventArgs)
-+SSC-M: System.Void System.Windows.Controls.RichTextBox::OnKeyUp(System.Windows.Input.KeyEventArgs)
-+SSC-M: System.Void System.Windows.Controls.RichTextBox::OnMouseLeftButtonDown(System.Windows.Input.MouseButtonEventArgs)
-+SSC-M: System.Void System.Windows.Controls.RichTextBox::OnMouseLeftButtonUp(System.Windows.Input.MouseButtonEventArgs)
-+SSC-M: System.Void System.Windows.Controls.RichTextBox::OnMouseMove(System.Windows.Input.MouseEventArgs)
-+SSC-M: System.Void System.Windows.Controls.RichTextBox::SelectAll()
-+SSC-M: System.Windows.Documents.TextPointer System.Windows.Controls.RichTextBox::GetPositionFromPoint(System.Windows.Point)
-+SSC-M: System.Windows.Documents.TextPointer System.Windows.Controls.RichTextBox::get_ContentStart()
-+SSC-M: System.Windows.Documents.TextPointer System.Windows.Controls.RichTextBox::get_ContentEnd()
 +SSC-M: System.Nullable`1<System.Boolean> System.Windows.Controls.SaveFileDialog::ShowDialog()
 +SSC-M: System.Void System.Windows.Controls.TextBlock::.cctor()
 +SSC-M: System.Void System.Windows.Controls.TextBox::.cctor()
@@ -388,15 +379,11 @@
 +SSC-M: System.Void System.Windows.Deployment::EmitError(System.Int32,System.String)
 +SSC-M: System.Void System.Windows.Documents.FontSource::.ctor(System.IO.Stream)
 +SSC-M: System.Void System.Windows.Documents.TextPointer::.ctor(System.IntPtr,System.Boolean)
++SSC-M: Mono.Kind System.Windows.Documents.TextPointer::Mono.INativeEventObjectWrapper.GetKind()
 +SSC-M: System.Void System.Windows.Documents.TextPointer::Free()
-+SSC-M: System.Int32 System.Windows.Documents.TextPointer::CompareTo(System.Windows.Documents.TextPointer)
-+SSC-M: System.Windows.Rect System.Windows.Documents.TextPointer::GetCharacterRect(System.Windows.Documents.LogicalDirection)
-+SSC-M: System.Windows.Documents.TextPointer System.Windows.Documents.TextPointer::GetNextInsertionPosition(System.Windows.Documents.LogicalDirection)
-+SSC-M: System.Windows.Documents.TextPointer System.Windows.Documents.TextPointer::GetPositionAtOffset(System.Int32,System.Windows.Documents.LogicalDirection)
 +SSC-M: System.Void System.Windows.Documents.TextSelection::.ctor(System.IntPtr,System.Boolean)
++SSC-M: Mono.Kind System.Windows.Documents.TextSelection::Mono.INativeEventObjectWrapper.GetKind()
 +SSC-M: System.Void System.Windows.Documents.TextSelection::Free()
-+SSC-M: System.Void System.Windows.Documents.TextSelection::Insert(System.Windows.Documents.TextElement)
-+SSC-M: System.Void System.Windows.Documents.TextSelection::Select(System.Windows.Documents.TextPointer,System.Windows.Documents.TextPointer)
 +SSC-M: System.Void System.Windows.ExceptionRoutedEventArgs::.ctor(Mono.MoonError)
 +SSC-M: System.Windows.ExceptionRoutedEventArgs System.Windows.ExceptionRoutedEventArgs::FromErrorEventArgs(System.IntPtr)
 +SSC-M: System.Void System.Windows.FrameworkElement::.cctor()
